# tesseract-ocr

./: README.md  preprocessing.ipynb  pyproject.toml  tesseract-example.ipynb
projeto1/: projeto1.ipynb  resultados_ocr.txt
