[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["Ramon Medeiro <r.medeiro10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytesseract = "^0.3.10"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.2"
spacy = "^3.7.4"
imutils = "^0.5.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
